--- a/front/src/app/shadowing/learning/[slug]/components/player.module.css
+++ b/front/src/app/shadowing/learning/[slug]/components/player.module.css
@@ -2,16 +2,15 @@
   .videoContainer {
     padding: 0;
     width: 100%;
-    height: 100%;
-    max-height: 700px;
-    min-width: 800px;
+    height: calc(100vh / 10 * 7);
     position: relative;
   }
   .videoContainer iframe,
   .videoContainer object,
-  .videoContainer embed {
+  .videoContainer embed,
+  .videoContainer img {
     position: absolute;
-    max-height: 700px;
+    height: calc(100vh / 10 * 7);
     width: 100%;
     height: 100%;
   }
@@ -23,15 +22,17 @@
     padding-top: 30px;
     overflow: hidden;
     width: 100%;
+    height: calc(100vw / 3 * 2);
   }
 
   .videoContainer iframe,
   .videoContainer object,
-  .videoContainer embed {
+  .videoContainer embed,
+  .videoContainer img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100vw / 3 * 2);
   }
 }
