--- a/front/src/app/shadowing/learning/[slug]/components/player.module.css
+++ b/front/src/app/shadowing/learning/[slug]/components/player.module.css
@@ -17,6 +17,23 @@
 }
 @media screen and (max-width: 1023px) {
   .videoContainer {
+    padding: 0;
+    width: 100%;
+    height: calc(100vh / 10 * 6);
+    position: relative;
+  }
+  .videoContainer iframe,
+  .videoContainer object,
+  .videoContainer embed,
+  .videoContainer img {
+    position: absolute;
+    height: calc(100vh / 10 * 7);
+    width: 100%;
+    height: 100%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .videoContainer {
     position: relative;
     padding-bottom: 56.25%;
     padding-top: 30px;
